Fixed bug where images weren't showing up

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
     <main>
 
-        <img src="/student-bio/img/profile-picture.jpg" alt="A picture of myself" class="profile-image">
+        <img src="img/profile-picture.jpg" alt="A picture of myself" class="profile-image">
         <div class="paragraphs">
             <p><strong>Hi there!</strong> Thanks for stopping by! My name's Matt and I am currently looking for a career
                 change into the
@@ -50,7 +50,7 @@
         <div class="card">
             <h2>Skills</h2>
             <p>HTML - CSS - JavaScript - Git</p>
-            <img src="/student-bio/img/icons.png" alt="Icons of HTML, CSS & JavaScript" class="icons">
+            <img src="img/icons.png" alt="Icons of HTML, CSS & JavaScript" class="icons">
         </div>
         <div class="card">
             <h2>Card 3</h2>
